# ufotweak

./: LICENSE.txt  pyproject.toml  setup.py
lib/ufotweak/: __main__.py  update.py
ufotweak/: __main__.py  update.py
