[tool.poetry]
name = "ufotweak"
version = "0.1.0"
description = ""
authors = ["Denis Moyogo Jacquerye <moyogo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fonttools = {extras = ["ufo"], version = "^4.27.1"}
ufoLib2 = "^0.11.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
